force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/Process_Document_Dispatch_Path_Details__c.object-meta.xml
<CustomObject>
    <label>Process Document Dispatch Path Detail</label>
    <nameField>
        <label>Process Document Dispatch Path Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Document Dispatch Path Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>