force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Dispatched</fullName>
            </value>
            <value>
                <fullName>To Be Handed Over</fullName>
            </value>
            <value>
                <fullName>Document Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>