force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/fields/Process_Document_Dispatch_Path__c.field-meta.xml
<CustomField>
    <fullName>Process_Document_Dispatch_Path__c</fullName>
    <label>Process Document Dispatch Path</label>
    <referenceTo>Process_Document_Dispatch_Path__c</referenceTo>
    <relationshipLabel>Process Document Dispatch Path Details</relationshipLabel>
    <relationshipName>Process_Document_Dispatch_Path_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>