force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/fields/Receiver_Account__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Receiver - Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Process Document Dispatch Path Details</relationshipLabel>
    <relationshipName>Process_Document_Dispatch_Paths</relationshipName>
    <type>Lookup</type>
</CustomField>