force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/fields/Receiver_Type__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Type__c</fullName>
    <label>Receiver Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dispatch_Path_Receiver_Account_Type</valueSetName>
    </valueSet>
</CustomField>