force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/fields/Receiver_Value__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Value__c</fullName>
    <label>Receiver Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>