force-app/main/default/objects/Process_Document_Dispatch_Path_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Status__c</columns>
    <columns>Process_Document_Dispatch_Path__c</columns>
    <columns>Receiver_Account__c</columns>
    <columns>Receiver_Type__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Receiver_Value__c</columns>
    <columns>IsActive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>